# AI_Powered_Dynamic_Pricing_And_Demand_Forecasting

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  docker-compose.yml
.github/workflows/: deploy-backend.yml  deploy-frontend.yml  test.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/core/: config.py  constants.py  logger.py
backend/app/core/db/: connection.py  init_indexes.py  py_object_id.py
backend/app/domains/anomaly/: models.py
backend/app/domains/auth/: models.py  refreshToken.model.py  user.model.py
backend/app/domains/forecasting/: models.py
backend/app/domains/inventory/: models.py
backend/app/domains/pricing/: models.py
backend/app/domains/products/: models.py
backend/app/domains/sales_data/: processed_sales.model.py  raw_sales.model.py
backend/app/domains/uploads/: models.py
backend/app/worker/: main.py
backend/tests/: test_main.py
docs/: AI_Retail_Platform_Architecture.md  AI_Retail_Platform_PRD_SRS_Draft.docx  AI_Retail_Platform_System_Design.docx
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/routes/: index.jsx
frontend/src/shared/apiClient/: index.js
frontend/src/shared/constants/: index.js
frontend/src/shared/hooks/: index.js
frontend/src/shared/layouts/: index.jsx
frontend/src/shared/utils/: index.js
