[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-pricing-platform-backend"
version = "0.1.0"
description = "Backend for AI-Powered Dynamic Pricing & Demand Forecasting Platform"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "motor",
    "pydantic",
    "pydantic-settings",
    "python-jose[cryptography]",
    "passlib[argon2]",
    "python-multipart",
    "pymongo",
    "python-dotenv",
    "loguru",
    "httpx"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
